<?xml version="1.0"?>
<package>
  <name>rose_ui_messaging</name>
  <version>0.0.1</version>
  <description>The rose_ui_messaging package</description>

   <author email="langen@robot-rose.nl">Mathijs de Langen</author>
  <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ui_messaging_base</run_depend>
  <run_depend>operator_messaging</run_depend>

  <export>
    <metapackage />
  </export>
</package>