<?xml version="1.0"?>
<package>
  <name>ui_messaging_base</name>
  <version>0.0.1</version>
  <description>The ui_messaging_base package</description>

  <maintainer email="langen@robot-rose.nl">Mathijs de langen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>